# screen_recorder

./: .gitignore  AudioRecorder.cpp  CMakeLists.txt  Origine.cpp  README.md  ScreenRecorder.cpp  ScreenRecorder.h  ScreenRecorder.sln  ScreenRecorder.vcxproj  ScreenRecorder.vcxproj.filters  ScreenSize.h  main.cpp
Debug/: ScreenRecorder.ilk  vc142.idb
Debug/ScreenRecorder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ScreenRecorder.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/libavutil/: ffversion.h
lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
x64/Debug/: ScreenRecorder.exe.recipe  ScreenRecorder.ilk  ScreenRecorder.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/ScreenRecorder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ScreenRecorder.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
